<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AuthentificationActivities.LoginActivity"
    tools:ignore="VectorDrawableCompat"
    android:background="@color/colorBlue">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bgHeader"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/colorBlue"/>

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:elevation="5dp"
        android:text="Mon Agenda Partagé"
        android:textColor="#fff"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/tvLogin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tvDesc"
        android:layout_marginTop="15dp"
        android:transitionName="tvLogin"
        android:layout_alignLeft="@+id/tvDesc"
        android:elevation="5dp"
        android:src="@drawable/calendar_pic"/>


    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bgHeader"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="Email"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:inputType="text"
                        android:id="@+id/email"
                        android:hint="Votre email"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="Mot de passe"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:inputType="textPassword"
                        android:id="@+id/password"
                        android:hint="Votre mot de passe"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv"
                android:layout_alignLeft="@+id/cv"
                android:layout_alignRight="@+id/cv"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="-50dp"
                android:layout_marginRight="35dp"
                android:elevation="10dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_ui"
                    android:text="Se connecter"
                    android:id="@+id/btn_login"
                    android:textAllCaps="false"
                    android:textColor="#fff" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/cv"
                android:layout_alignRight="@+id/cv"
                android:layout_marginTop="-20dp"
                android:layout_marginRight="-20dp"
                android:elevation="10dp">

                <ImageButton
                    android:id="@+id/btRegister"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_ui"
                    android:src="@drawable/ic_add" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:elevation="5dp"
                android:text="Mot de passe oublié ?"
                android:textColor="@color/colorWhite"
                android:id="@+id/forgot_password"
                android:textSize="14sp" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>