...
                        android:layout_marginRight="10dp"
                        android:inputType="textEmailAddress"
                        android:id="@+id/username"
                        android:hint="@string/ACTIVITY_REGISTER_USERNAME_FR"/>

...
                        android:layout_marginRight="10dp"
                        android:inputType="text"
                        android:id="@+id/firstname"
                        android:hint="@string/ACTIVITY_REGISTER_YOUR_FIRSTNAME_FR"/>

...
                        android:layout_marginRight="10dp"
                        android:inputType="text"
                        android:id="@+id/lastname"
                        android:hint="@string/ACTIVITY_REGISTER_YOUR_LASTNAME_FR"/>

...

                    <EditText
                        android:id="@+id/birthDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/numeroVoieET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <Spinner
                        android:id="@+id/adressTypeSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/adressNameET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/codePostal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/townName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/numeroTelephoneET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:id="@+id/email"
                        android:hint="@string/ACTIVITY_REGISTER_YOUR_MAIL_FR"/>

...
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:id="@+id/passwordTxt"
                            android:hint="@string/ACTIVITY_REGISTER_YOUR_PASSWORD_FR"/>
                    </com.google.android.material.textfield.TextInputLayout>
...
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:id="@+id/passwordTxtRetype"
                            android:hint="@string/ACTIVITY_REGISTER_CONFIRM_YOUR_PASSWORD_FR"/>
                    </com.google.android.material.textfield.TextInputLayout>
...
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/btn_register"/>
            </RelativeLayout>
        </RelativeLayout>
...
